--- a/src/components/BucketDetail/BucketDetail.css
+++ b/src/components/BucketDetail/BucketDetail.css
@@ -1,3 +1,15 @@
+#bucket-title {
+  color: rgb(4, 45, 160);
+  margin: 10px;
+  padding: 10px;
+}
+
 #bucket-detail-body {
-  text-align: center;
+  text-align: left;
+}
+
+#label {
+  text-decoration: underline;
+  font-weight: bold;
+  padding-left: 20px;
 }
