--- a/src/components/BucketDetail/BucketDetail.css
+++ b/src/components/BucketDetail/BucketDetail.css
@@ -13,3 +13,10 @@
   font-weight: bold;
   padding-left: 20px;
 }
+
+#bucket-form {
+  margin: 20px;
+  font-size: 24px;
+  width: 10em;
+  height: 10em;
+}
